--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Galib | Home</title> 
     <link rel="stylesheet" href="http"://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/Galibbootstrap.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/css/uikit.min.css">
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/css/uikit.min.css">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/uikit/3.4.0/js/components/lightbox.min.js">
     <link href="http://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="./js/lightbox.js">
@@ -102,7 +102,7 @@
           <div class="card">
             <h4 class="card-heading text-center">Analog Clock</h4>
             <div class="card-body">
-                <a href="https://100galib.github.io/aClock"> <span style="font-size: 100px;" class="fa fa-clock-o"></span><br> <small>Javascript project</small></a>
+                <a href="http://100galib.github.io/aClock"> <span style="font-size: 100px;" class="fa fa-clock-o"></span><br> <small>Javascript project</small></a>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
           <div class="card">
             <h4 class="card-heading text-center">Tap & Play</h4>
             <div class="card-body">
-                <a href="https://100galib.github.io/playMusic"> <span style="font-size: 100px; color:  rgb(140, 88, 184);" class="fa fa-music"></span><br> <small>Javascript project</small></a>
+                <a href="http://100galib.github.io/playMusic"> <span style="font-size: 100px; color:  rgb(140, 88, 184);" class="fa fa-music"></span><br> <small>Javascript project</small></a>
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
           <div class="card">
             <h4 class="card-heading text-center">AgeCalculator & Game</h4>
             <div class="card-body">
-                <a href="https://100galib.github.io/jsGame"> <span style="font-size: 100px;" class="fa fa-calculator"></span><br> <small>Javascript project</small></a>
+                <a href="http://100galib.github.io/jsGame"> <span style="font-size: 100px;" class="fa fa-calculator"></span><br> <small>Javascript project</small></a>
             </div>
           </div>
         </div>
@@ -126,7 +126,7 @@
           <div class="card">
             <h4 class="card-heading text-center">Blood Foundation</h4>
             <div class="card-body">
-                <a href="https://100galib.github.io/jsGame"> <span style="font-size: 100px; color: red;" class="fa fa-tint"></span><br> <small> PHP project</small></a>
+                <a href="http://100galib.github.io/jsGame"> <span style="font-size: 100px; color: red;" class="fa fa-tint"></span><br> <small> PHP project</small></a>
     
             </div>
 
