--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <!-- footer_section_start_here -->
  <section id="footerSection" class="text-center bg-dark">
      <div class="container py-5  text-light">
-         Develop BY <span>&copy;</span> <a href="https://www.facebook.com/Tm.galib">Musanna Galib</a>
+         Develop BY <span>&copy;</span> <a href="http://www.facebook.com/Tm.galib">Musanna Galib</a>
      <div id="app" class="my-5"></div>
      </div>
      </div>
@@ -166,7 +166,7 @@
     <script src="./main.js"></script>
 
 
-    <script src="https://formspree.io/js/formbutton-v1.0.0.min.js" defer></script>
+    <script src="http://formspree.io/js/formbutton-v1.0.0.min.js" defer></script>
 
 <script>
   /* paste this in verbatim */
