header some changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon"  href="img/mg.png" type="image/x-icon">
+    <link rel="shortcut icon"  href="img/galib(1).jpg" type="image/x-icon">
     <title>Galib | Home</title> 
     <link rel="stylesheet" href="http"://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/Galibbootstrap.css">
@@ -21,7 +21,7 @@
     <section id="navSection" class="bg-dark">
     <nav id="nav" class="navbar navbar-dark navbar-expand-md fixed-top text-dark">
         <div class="container "> 
-            <img class="headPic" src="./img/galib.jpeg" alt="">
+            <img class="headPic" src="./img/galib(1).jpg" alt="">
         <div class="text-left brandText">&Gfr;&Afr;&Lfr;&Ifr;&Bfr;</div>
         <div>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navSec">
@@ -168,43 +168,6 @@
 
     <script src="http://formspree.io/js/formbutton-v1.0.0.min.js" defer></script>
 
-<script>
-  /* paste this in verbatim */
-  window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments);};
 
-  /* customize formbutton here*/     
-  formbutton("create", {
-    action: "http://formspree.io/tmrazin51@gmail.com",
-    title: "How can I help?",
-    fields: [
-      { 
-        type: "email", 
-        label: "Email:", 
-        name: "_replyto",
-        required: true,
-        placeholder: "your@email.com"
-      },
-      {
-        type: "textarea",
-        label: "Message:",
-        name: "message",
-        placeholder: "What's on your mind?",
-      },
-      { type: "submit" }      
-    ],
-    styles: {
-      fontFamily: "Montserrat",
-      title: {
-        background: "#d36e3fa8",
-      },
-      button: {
-        background: "red",
-      }
-    },
-    initiallyVisible: true
-  });
-
-   
-   </script>
 </body>
 </html>
