--- a/photography/index.html
+++ b/photography/index.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
  <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon"  href="img/mg.png" type="image/x-icon">
-    <title>Galib | Photography</title>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/Galibbootstrap.css">
-    <link rel="stylesheet" href="css/uikit.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon"  href="../img/" type="image/x-icon">
+        <title>Galib | Photography</title> 
+        <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/Galibbootstrap.css">
+        <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/css/uikit.min.css">
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/uikit/3.4.0/js/components/lightbox.min.js">
+        <link href="http://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link rel="stylesheet" href="./js/lightbox.js">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/font-awesome.min.css">
+        <link rel="stylesheet" href="../css/uikit.min.css">
+        <link rel="stylesheet" href="../style.css">
+    </head>
 <body>
     <!-- navSection Start -->
     <section id="navSection" class="bg-dark">
-    <nav id="nav" class="navbar navbar-dark  navbar-expand-md text-center fixed-top">
-        <div class="container">
-            <img class="headPic" src="./img/galib.jpeg" alt="">
-        <div class="navbar-brand text-uppercase brandText">&Gfr;&Afr;&Lfr;&Ifr;&Bfr;</div>
-        <div>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navSec">
+        <nav id="nav" class="navbar navbar-dark navbar-expand-md fixed-top text-dark">
+          <div class="container ">
+            <img class="headPic" src="../img/galib(1).jpg" alt="">
+            <div class="text-left brandText">&Gfr;&Afr;&Lfr;&Ifr;&Bfr;</div>
+            <div>
+              <button class="navbar-toggler" data-toggle="collapse" data-target="#navSec">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navSec">
-        <ul class="navbar-nav text-uppercase text-left">
-            <li class="nav-item"> <a  class="nav-link " href="index.html"> <span class="fa fa-home fa-spin p-1"></span> Home</a></li>
-            <li class="nav-item"> <a  class="nav-link" href="./experi.html"> <span class="fa fa-code fa-spin p-1"></span>Experience</a></li>
-            <li class="nav-item"> <a  class="nav-link" href="./edu.html"> <span class="fa fa-institution fa-spin p-1"></span>Education</a></li> 
-            <li class="nav-item"> <a style="border-bottom:  1px solid rgb(144, 243, 243);"  class="nav-link active" href="./photo.html"> <span class="fa fa-camera fa-spin p-1"></span>Photography</a></li>
-            <li class="nav-item"> <a  class="nav-link " href="./contact.html"> <span class="fa fa-phone fa-spin p-1"></span>contact</a></li>
-        </ul>
-    </div>
-         </div>
-    </div>
-    </nav>
-    </section>
+              </button>
+              <div class="collapse navbar-collapse text-dark" id="navSec">
+                <ul class="navbar-nav text-uppercase ">
+                  <li class="nav-item"> <a class="nav-link"
+                      href="../index.html"><span class="fa fa-home fa-spin p-1"></span> Home</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="../experiment/"><span
+                        class="fa fa-code fa-spin p-1"></span>Experience</a></li>
+                  <li class="nav-item"> <a class="nav-link active" href="../education/"> <span
+                        class="fa fa-institution fa-spin p-1"></span>Education</a></li>
+                  <li class="nav-item"> <a style="border-bottom:  1px solid rgb(129, 192, 192);" class="nav-link" href="../photography/"> <span
+                        class="fa fa-camera fa-spin p-1"></span>Photography</a></li>
+                  <li class="nav-item"> <a  class="nav-link " href="../contact/"> <span
+                        class="fa fa-phone fa-spin p-1"></span>contact</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </section>
     
     <!-- navsection_end -->
     <!-- photo start here -->
@@ -248,53 +257,14 @@
      </div>
  </section>
     
-    <script src="./js/uikit.min.js"></script>
-    <script src="./js/uikit-icons.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/jquery-3.4.1.slim.min.js"></script>
-    <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="../js/uikit.min.js"></script>
+    <script src="../js/uikit-icons.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery-3.4.1.slim.min.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 
     <script src="https://formspree.io/js/formbutton-v1.0.0.min.js" defer></script>
-
-<script>
-  /* paste this in verbatim */
-  window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments);};
-
-  /* customize formbutton here*/     
-  formbutton("create", {
-    action: "https://formspree.io/tmrazin51@gmail.com",
-    title: "Comment about My Photography",
-    fields: [
-      { 
-        type: "email", 
-        label: "Email:", 
-        name: "_replyto",
-        required: true,
-        placeholder: "your@email.com"
-      },
-      {
-        type: "textarea",
-        label: "Message:",
-        name: "message",
-        placeholder: "What's on your mind?",
-      },
-      { type: "submit" }      
-    ],
-    styles: {
-      fontFamily: "Montserrat",
-      title: {
-        background: "gray",
-      },
-      button: {
-        background: "gray",
-      }
-    },
-    initiallyVisible: true
-  });
-
-   
-   </script>
 </body>
 </html>
