project link updated

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="card">
             <h4 class="card-heading text-center">Analog Clock</h4>
             <div class="card-body">
-                <a href="http://100galib.github.io/aClock"> <span style="font-size: 100px;" class="fa fa-clock-o"></span><br> <small>Javascript project</small></a>
+                <a href="http://galib100.github.io/aClock"> <span style="font-size: 100px;" class="fa fa-clock-o"></span><br> <small>Javascript project</small></a>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
           <div class="card">
             <h4 class="card-heading text-center">Tap & Play</h4>
             <div class="card-body">
-                <a href="http://100galib.github.io/playMusic"> <span style="font-size: 100px; color:  rgb(140, 88, 184);" class="fa fa-music"></span><br> <small>Javascript project</small></a>
+                <a href="https://galib100.github.io/playMusic/"> <span style="font-size: 100px; color:  rgb(140, 88, 184);" class="fa fa-music"></span><br> <small>Javascript project</small></a>
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
           <div class="card">
             <h4 class="card-heading text-center">AgeCalculator & Game</h4>
             <div class="card-body">
-                <a href="http://100galib.github.io/jsGame"> <span style="font-size: 100px;" class="fa fa-calculator"></span><br> <small>Javascript project</small></a>
+                <a href="http://galib100.github.io/jsGame"> <span style="font-size: 100px;" class="fa fa-calculator"></span><br> <small>Javascript project</small></a>
             </div>
           </div>
         </div>
@@ -126,7 +126,7 @@
           <div class="card">
             <h4 class="card-heading text-center">Blood Foundation</h4>
             <div class="card-body">
-                <a href="http://100galib.github.io/jsGame"> <span style="font-size: 100px; color: red;" class="fa fa-tint"></span><br> <small> PHP project</small></a>
+                <a href="http://galib100.github.io/jsGame"> <span style="font-size: 100px; color: red;" class="fa fa-tint"></span><br> <small> PHP project</small></a>
     
             </div>
 
