--- a/experi.html
+++ b/experi.html
@@ -119,7 +119,7 @@
                     <p> <span> </span> </p> 
                 </div>
             </div>
-            <div> <a class="btn btn-outline-danger m-1" href="./index.html"> View My project</a></div>
+            <div> <a class="btn btn-outline-danger m-1" href="../index.html"> View My project</a></div>
         </div>
     </div>
     </section>
