--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="navbar-nav text-uppercase ">
             <li  class="nav-item"> <a style="border-bottom:  1px solid rgb(129, 192, 192);"  class="nav-link active" href="index.html"><span class="fa fa-home fa-spin p-1"></span> Home</a></li>
             <li class="nav-item"> <a  class="nav-link" href="./experi.html"><span class="fa fa-code fa-spin p-1"></span>Experience</a></li>
-            <li class="nav-item"> <a  class="nav-link" href="./edu.html"> <span class="fa fa-institution fa-spin p-1"></span>Education</a></li> <li class="nav-item"> <a  class="nav-link" href="./photo.html"> <span class="fa fa-camera fa-spin p-1"></span>Photography</a></li>
+            <li class="nav-item"> <a  class="nav-link" href="./education/edu.html"> <span class="fa fa-institution fa-spin p-1"></span>Education</a></li> <li class="nav-item"> <a  class="nav-link" href="./photo.html"> <span class="fa fa-camera fa-spin p-1"></span>Photography</a></li>
             <li class="nav-item"> <a  class="nav-link" href="./contact.html"> <span class="fa fa-phone fa-spin p-1"></span>contact</a></li>
         </ul>
     </div>
